- add default challenge - rework on challenge inventory - patch bug (forget to ignore cancelled event)